# rplayer

./: .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
android/: .gitignore  build.gradle  consumer-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: entry_page.dart  main.dart  video_page.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  (+1 more)
ios/: rplayer.podspec
ios/Classes/: RPlayerPlugin.h  RPlayerPlugin.m  RplayerPlugin.h  RplayerPlugin.m
lib/: native_library.dart  rplayer.dart  rplayer_config.dart  rplayer_ffi.g.dart  rplayer_method_channel.dart  rplayer_platform_interface.dart  rplayer_state.dart  rplayer_view.dart  rplayer_web.dart
lib/cpp/: CMakeLists.txt
lib/cpp/include/rplayer/: crplayer.h  rplayer.h
lib/cpp/src/: crplayer.cc  decoder.cc  decoder.h  player_like.cc  player_like.h  renderer.cc  renderer.h  rplayer.cc  status.h
lib/cpp/src/base/: build_configs.h  logging.cc  logging.h  macros.h  type_guard.h
lib/cpp/src/base/android/: gl_context_manager_android.cc  gl_context_manager_android.h  jni_on_load.cc  jni_util.cc  jni_util.h  jni_weak_ref.cc  jni_weak_ref.h  logging_android.cc  logging_android.cpp  logging_android.h  scoped_java_ref.cc  scoped_java_ref.h
src/: CMakeLists.txt  config.cpp  config.h  decoder.cpp  decoder.h  decoder_c.cpp  decoder_c.h  decoder_thread.cpp  decoder_thread.h  ffi_export.h  flutter.h  log.h  platform.cpp  platform.h  player.cpp  player.h  render_thread.cpp  render_thread.h  rplayer_dart.cpp  rplayer_dart.h
src/ffi/: ffi_android.cpp  ffi_android.h  ffi_export.h  ffi_flutter.cpp  ffi_flutter.h  ffi_rplayer.cpp  ffi_rplayer.h  jni_loader.cpp  jni_loader.h  jni_onload.cpp  jni_onload.h
src/ffmpeg/: CMakeLists.txt
src/plugin/: plugin_android.cpp  plugin_android.h
src/texture/: texture_android.cpp  texture_android.h
src/util/: log.cpp  log.h  nppm.cpp  nppm.h
test/: rplayer_method_channel_test.dart  rplayer_test.dart
windows/: CMakeLists.txt  rplayer_plugin.cpp  rplayer_plugin.h  rplayer_plugin_c_api.cpp
(+13 files in other folders)
